[package]
name = "rust-ipld-hamt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_hamt = { path = "vendor/fvm_ipld_hamt" }
# fvm_ipld_hamt = "*"
parking_lot = "*"
fvm_ipld_blockstore = "*"
anyhow = "*"
cid = "=0.8.5"
once_cell = "1.5"
fvm_ipld_encoding = "0.2"
serde = "*"
hex = "0.4.3"

[dev-dependencies]
proptest = "*"
test-strategy = "*"

[profile.dev]
opt-level = 3
